infrastructure/open_shift/python_app/my_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-loader
  labels:
    app: data-loader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-loader
  template:
    metadata:
      labels:
        app: data-loader
    spec:
      containers:
      - name: data-loader
        image: mendikup25/data-loader:latest
        ports:
        - containerPort: 8000
