infrastructure/open_shift/python_app/my_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-loader
  labels:
    app: data-loader
spec:
  selector:
    app: data-loader
  ports:
    - name: http
      port: 8000        # Service port inside the cluster
      targetPort: 8000  # Must match containerPort in deployment
      protocol: TCP
  type: ClusterIP
