infrastructure/open_shift/python_app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: data-loader
  labels:
    app: data-loader
spec:
  to:
    kind: Service
    name: data-loader
  port:
    targetPort: http
  tls:
    termination: edge
